[package]
name = "clippy-linux"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3          # maksymalna optymalizacja (i tak domyślne, ale warto jawnie)
lto = "fat"            # Link-Time Optimization (spina całą paczkę)
codegen-units = 1      # jeden wątek generowania kodu – lepsza optymalizacja
panic = "abort"        # pomijamy unwinding (zmniejsza kod, przyspiesza)
strip = "symbols"      # usuwa symbole (zmniejsza binarkę)


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sys-info = "0.9"
rand = "0.8"
directories = "5.0"
image = "0.25.10"
tiny-skia = "0.11"
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
base64 = "0.22"

smithay-client-toolkit = "0.18"
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
calloop = "0.12"
log = "0.4"
